external-crates/move/crates/move-compiler/tests/move_check/parser/module_missing_rbrace.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/move_check/parser/module_missing_rbrace.move
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/module_missing_rbrace.move:4:1
  │
4 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
